# rxnfit

./: .buildinfo  .gitignore  LICENSE  README.md  check_cells.py  genindex.html  index.html  kineticsform_sample_script_2.ipynb  kineticsform_sample_script_2_2.ipynb  modules.html  objects.inv  py-modindex.html  pyproject.toml  rxnfit.build_ode.html  rxnfit.expdata_fit_sci.html  rxnfit.expdata_reader.html  rxnfit.fit_metrics.html  rxnfit.html  rxnfit.p0_opt_fit.html  rxnfit.plot_results.html  rxnfit.rate_const_ft_eval.html  rxnfit.rxn_reader.html  rxnfit.solv_ode.html  sample_data.csv  sample_data1_2.csv  search.html  searchindex.js
_sources/: index.rst.txt  rxnfit.expdata_fit_sci.rst.txt  rxnfit.rate_const_ft_eval.rst.txt  rxnfit.rst.txt  rxnfit.solv_ode.rst.txt
_static/: documentation_options.js
docs/: ForFutureWorks.md  PriorWorks.md  fit_metrics.md  japanese_to_english_messages_table.md  k_as_ft.md  p0_opt_fit.md  p0_opt_fit_catch_spec.md  plot_result.md  rss_r2_goodness_of_fit_spec_open_points.md  run_fit_p0_dict_spec.md
example_script/: X_example_script_classRxnODEsolver_3.ipynb  _draft_rxnfit_sample_script_3.ipynb  data_fit.ipynb  example_script_classExpDataFitSci2b.ipynb  example_script_classExpDataFitSci3b.ipynb  example_script_classExpDataFitSci_ref2b.ipynb  example_script_classExpDataFitSci_ref3.ipynb  example_script_classExpDataFitSci_ref4.ipynb  example_script_classRxnODEsolver.ipynb  example_script_classRxnODEsolver1.ipynb  example_script_classRxnODEsolver2.ipynb  example_script_classRxnODEsolver2a.ipynb  example_script_classRxnODEsolver3.ipynb  example_script_classRxnODEsolver3a.ipynb  example_script_classRxnODEsolverXa.ipynb  example_script_classRxnODEsolver_ref1.ipynb  example_script_classRxnODEsolver_ref3_litk.ipynb  example_script_classRxnToODE.ipynb  example_script_rxn_reader.ipynb  kineticsform_sample_script_2.ipynb  rxnfit_sample_script_2.ipynb
examples/: 01_example_script_classRxnODEsolver_ref1.ipynb  02_example_script_classRxnODEsolver_ref3_litk.ipynb  02_example_test.ipynb  03_example_script_classExpDataFitSci_ref2b.ipynb  03_example_script_classExpDataFit_ref2b.ipynb  04_example_script_classExpDataFitSci_ref3.ipynb  04_example_script_classExpDataFit_ref3.ipynb  05_example_script_classExpDataFitSci_ref4.ipynb  05_example_script_classExpDataFit_ref4.ipynb  06_example_script_classExpDataFitSci_ref5.ipynb  06_example_script_classExpDataFit_ref5.ipynb  07_example_script_classExpDataFitSci_ref6.ipynb  07_example_script_classP0ValOpt_ref5.ipynb  08_example_script_classExpDataFitSci_ref6.ipynb  08_example_script_classExpDataFit_ref6.ipynb  08_example_script_classP0ValOpt_ref5.ipynb  09_example_script_classP0_ref2.ipynb  example_script_classExpDataFitSci_ref2b.ipynb  example_script_classExpDataFitSci_ref3.ipynb  example_script_classExpDataFitSci_ref4.ipynb  example_script_classExpDataFitSci_ref5.ipynb  example_script_classRxnToODE.ipynb  (+3 more)
(+76 files in other folders)
